added content to witches-page

--- a/witches.html
+++ b/witches.html
@@ -28,6 +28,17 @@
     </div>
 
     <div class="flex-container"> <!-- main content area-->
+        <div class="flex-item"><img src="images/witch-of-the-south.jpg" alt="The Witch of the South" class="section-img">
+            <p>The Good Witch of the South is Glinda the Good. She is the most powerful of the Witches. According to the Soldier with Green Whiskers, Glinda:</p>
+                <blockquote> "knows how to keep young in spite of the many years she has lived."" — The Wonderful Wizard of Oz, chapter 18, "Away to the South"</blockquote>
+            <p>So she was the most beautiful of the four witches. Later books in Baum's Oz series refer to Glinda as a Sorceress, rather than a Witch.</p>
+        </div>
+        <div class="flex-item">
+            <img src="wicked-witch-west.jpg" alt="The Wicked Witch of the West" class="section-img">
+        </div>
+        <div class="flex-item">
+            <img src="Witch-of-the-East.jpg" alt="The Witch of the Eest" class="section-img">
+        </div>
 
     </div>
     <footer>
