--- a/witches.html
+++ b/witches.html
@@ -34,10 +34,10 @@
             <p>So she was the most beautiful of the four witches. Later books in Baum's Oz series refer to Glinda as a Sorceress, rather than a Witch.</p>
         </div>
         <div class="flex-item">
-            <img src="wicked-witch-west.jpg" alt="The Wicked Witch of the West" class="section-img">
+            <img src="images/wicked-witch-west.jpg" alt="The Wicked Witch of the West" class="section-img">
         </div>
         <div class="flex-item">
-            <img src="Witch-of-the-East.jpg" alt="The Witch of the Eest" class="section-img">
+            <img src="images/Witch-of-the-East.jpg" alt="The Witch of the Eest" class="section-img">
         </div>
 
     </div>
