Actually fixed the images

--- a/witches.html
+++ b/witches.html
@@ -37,7 +37,7 @@
             <img src="images/wicked-witch-west.jpg" alt="The Wicked Witch of the West" class="section-img">
         </div>
         <div class="flex-item">
-            <img src="images/Witch-of-the-East.jpg" alt="The Witch of the Eest" class="section-img">
+            <img src="images/Witch_of_the_East.jpg" alt="The Witch of the East" class="section-img">
         </div>
 
     </div>
